welcome.lessons.welcome.loopdowhile.Poucet1.scala.code

while(!sortieTrouvee){
  
  for (k<-1 to 5){
    
    avance()
    if (estSurBiscuit()){
      compteur=compteur+1
    }
  var compteur=0}
  if (compteur>2){
    gauche()
    
  }
  else {
    droite()
  }
}
avance()